Fix typo in website heading

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>LikhonRana00</title>
 </head>
 <body>
-  <h1>Hello, this is LikhonRana00's website!</h1>
+  <h1>Hello, this is LikhonRana website!</h1>
   <p>Website under construction.</p>
 </body>
 </html>
