Refactor identity.html and update email
Removed redundant content and updated email address.

--- a/identity.html
+++ b/identity.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Md Likhon Rana</title>
-</head>
+<html>
 <body>
-  <h1>Md Likhon Rana</h1>
-  <p>EEE Student, University of Dhaka</p>
-  <p>Research Interests: Electronics, Circuits, Semiconductor Devices</p>
-  <p>Email: your-email@domain.com</p>
+
+<img src="photo.jpg" width="200">
+
+<h1>Md Likhon Rana</h1>
+<p>EEE Student, University of Dhaka</p>
+<p>Email: example@email.com</p>
+
 </body>
 </html>
